<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_white"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="@dimen/home_title"
            android:textColor="@color/red"
            android:fontFamily="@font/metropolis_semibold"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="30dp" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />
        <TextView
            android:visibility="gone"
            android:id="@+id/txt_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="@dimen/home_title"
            android:textColor="@color/colorApp"
            android:fontFamily="@font/metropolis_semibold"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="30dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_white"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="@dimen/home_title"
            android:textColor="@color/colorApp"
            android:fontFamily="@font/metropolis_semibold"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="30dp"
            android:paddingBottom="30dp" />

    </LinearLayout>
</LinearLayout>