<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SavedCreateFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rect_blue"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saved"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/metropolis_medium"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <ImageView
            android:visibility="gone"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_map_icon"
            android:layout_gravity="center"
            />

        <ImageView
            android:visibility="gone"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_search_white"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/layout_createnew"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rectshape_blue"
                    android:layout_gravity="center"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_a_new_list"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_16"
                        android:fontFamily="@font/metropolis_semibold"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/your_list"
                        android:textSize="@dimen/text_12"
                        android:textColor="@color/colorApp"
                        android:fontFamily="@font/metropolis_semibold"
                        android:layout_gravity="center"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_yourlist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/txt_yourlist_notdata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/you_are_currently_not_added_your_list"
                        android:textSize="@dimen/home_title"
                        android:fontFamily="@font/metropolis_semibold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/your_followed_list"
                        android:textSize="@dimen/text_12"
                        android:textColor="@color/colorApp"
                        android:fontFamily="@font/metropolis_semibold"
                        android:layout_gravity="center"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rec_yourfollowlist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <TextView
                        android:id="@+id/txt_yourfollowed_notdata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/your_are_currently_not_following_any_list"
                        android:textSize="@dimen/home_title"
                        android:fontFamily="@font/metropolis_semibold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>