<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_above="@id/layout_bototm"
        android:id="@+id/flHomeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:id="@+id/layout_bototm"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_navigation_bg"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">
        <LinearLayout
            android:id="@+id/layout_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selected_news_icon_blue"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textSize="@dimen/text_14"
                android:fontFamily="@font/metropolis_semibold"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_cate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selected_categories__blue"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textSize="@dimen/text_12"
                android:fontFamily="@font/metropolis_semibold"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSaved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selected_saved_icon_blue"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saved"
                android:textSize="@dimen/text_12"
                android:fontFamily="@font/metropolis_semibold"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMeasures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selected_measured_icon_blue"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:textSize="@dimen/text_12"
                android:fontFamily="@font/metropolis_semibold"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSeeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selected_see_more_icon_blue"

                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textSize="@dimen/text_12"
                android:fontFamily="@font/metropolis_semibold"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>