<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.MeasuredFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rect_blue"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_riga"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/metropolis_medium"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measures"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/metropolis_medium"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/img_search"
            android:visibility="visible"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_search_white"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/layout_search">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/rounded_not_fill_blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/dimen_10"
                    android:paddingEnd="@dimen/dimen_10">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/ic_search_gray"/>
                </LinearLayout>

                <EditText
                    android:padding="10dp"
                    android:id="@+id/edt_search"
                    android:layout_marginEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_12"
                    android:fontFamily="@font/metropolis_regular"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@drawable/rounded_not_fill_blue"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_12"
                android:layout_gravity="center"
                android:layout_weight="1"
                />
            <ImageView
                android:layout_gravity="center"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_down_arrow_blue"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@drawable/rounded_not_fill_blue"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_12"
                android:layout_gravity="center"
                android:layout_weight="1"
                />
            <ImageView
                android:layout_gravity="center"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_down_arrow_blue"
                />
        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
       android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        android:id="@+id/rec_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>