<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CarRoutesDetailsFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rect_blue"
        android:padding="15dp">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_back_white"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Castles in and kandava"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/metropolis_medium"
            android:textSize="@dimen/text_14"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_share_white"
            android:layout_gravity="center" />

    </LinearLayout>

    <ScrollView
        android:layout_above="@+id/layout_bottom"
        android:layout_below="@id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_180"
                android:background="@color/colorWhite"
                android:overScrollMode="always"
                />
            <ImageView
                android:visibility="gone"
                android:id="@+id/img_bg"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_180"
                android:src="@drawable/img_carratues_demo"
                android:scaleType="fitXY" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">
                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Castles in and kandava"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_14"
                    android:fontFamily="@font/metropolis_semibold"
                    android:layout_gravity="center"
                    />


                <TextView
                    android:id="@+id/txt_desc"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/metropolis_regular"
                    android:textSize="@dimen/text_12"
                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
                    android:layout_gravity="start"
                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/layout_showmap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/shape_blue"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_map_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_semibold"
                        android:text="@string/show_on_map"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_places"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_blue"
                    android:layout_gravity="center"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12">
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_map_route_white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_places"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_16"
                        android:fontFamily="@font/metropolis_semibold"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_direction"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_blue"
                    android:layout_gravity="center"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="@dimen/dimen_12"
                    android:paddingBottom="@dimen/dimen_12">
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_send_white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/get_direction"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_16"
                        android:fontFamily="@font/metropolis_semibold"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>